--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -1042,11 +1042,13 @@ NAVIGATION BAR
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: 0.5rem;
+  gap: 0.6rem;
 }
 
 .navbar-brand-logo {
   width: 35px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   height: auto;
   display: block;
 }
@@ -1127,7 +1129,7 @@ NAVIGATION BAR
 }
 
 .mobile-active-navlink {
-  color: var(--orange-50) !important;
+  color: var(--active-navlink) !important;
   font-weight: 600;
 }
 
@@ -1211,7 +1213,7 @@ NAVIGATION BAR
 .mobile-authenticated-user-links > a {
   width: auto;
   padding: 0;
-  color: var(--black-40);
+  color: var(--black-30);
   margin: 0 1.5rem
 }
 
@@ -1334,8 +1336,9 @@ NAVIGATION BAR
   .lg-authenticated-user-container > img {
     width: 30px;
     aspect-ratio: 1/1;
-    object-fit: cover;
     display: block;
+    height: auto;
+    border-radius: 50%;
   }
 
   .lg-authenticated-user-container >  i {
@@ -1369,7 +1372,7 @@ NAVIGATION BAR
 
   .lg-authenticated-user > 
   .navbar-navlink {
-    color: var(--black-15);
+    color: var(--black-20);
     padding: 0 1rem;
     height: initial;
     font-size: 1rem;
@@ -1423,7 +1426,7 @@ NAVIGATION BAR
 }
 
 .navbar-topic-link {
-  color: var(--black-15);
+  color: var(--black-30);
   font-size: 0.95rem;
   overflow-x: auto;
 }
@@ -1472,8 +1475,7 @@ NAVIGATION BAR
   }
 
   .navbar-topic-link {
-    color: var(--brown-10);
-    font-size: 0.95rem;
+    color: var(--black-20);
     overflow-x: auto;
   }
 }
@@ -1716,6 +1718,7 @@ Post Detail
   width: 50px;
   height: auto;
   display: block;
+  border-radius: 50%;
 }
 
 .post-detail-author-post-date {
@@ -1765,7 +1768,7 @@ Post Detail
   display: flex;
   align-items: end;
   gap: 1rem;
-  margin-top: 0.5rem
+  margin-top: 0.8rem;
 }
 
 .post-detail-container__post-like {
@@ -1780,7 +1783,7 @@ Post Detail
 
   padding: 0.2rem 0.8rem;
   border-radius: 20px;
-  background: var(--brown-50)
+  background: var(--black-50)
 }
 
 .post-detail-container__post-like-not-authenticated {
@@ -1793,11 +1796,11 @@ Post Detail
 
   padding: 0.2rem 0.8rem;
   border-radius: 20px;
-  background: var(--brown-50)
+  background: var(--black-50)
 }
 
 .post-detail-like {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .post-detail-like-count{
@@ -1814,11 +1817,11 @@ Post Detail
 
   padding: 0.2rem 0.8rem;
   border-radius: 20px;
-  background: var(--brown-50)
+  background: var(--black-50)
 }
 
 .post-detail-container__num-of-post {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   transform: rotateY(180deg);
 }
 
@@ -1844,7 +1847,7 @@ Post Detail
   display: flex;
   align-items: center;
   border-radius: 20px;
-  background: var(--brown-50)
+  background: var(--black-50)
 }
 
 .post-author-unfollow > button,
@@ -1874,12 +1877,12 @@ Post Detail
   justify-content: center;
   border-radius: 20px;
   padding: 0.2rem 0.8rem;
-  background: var(--brown-80);
+  background: var(--black-80);
   cursor: pointer;
 }
 
 .post-detail-ellipsis > i {
-  color: var(--brown-20);
+  color: var(--black-20);
   font-size: 1.3rem;
   margin-top: 0.12rem
 }
@@ -1902,14 +1905,14 @@ Post Detail
   gap: 1rem;
   padding: 1rem;
   border-radius: 10px;
-  background: var(--brown-90)
+  background: var(--black-90)
 }
 
 .post-detail-edit {
   display: flex;
   align-items: center;
   gap: 0.4rem;
-  color: var(--black-50);
+  color: var(--black-40);
   background: none;
   border: none;
   cursor: pointer;
@@ -1921,7 +1924,7 @@ Post Detail
 
 .post-detail-edit-text {
   font-size: 0.85rem;
-  color: var(--black-50);
+  color: var(--black-40);
 }
 
 .post-detail-delete {
@@ -1933,7 +1936,7 @@ Post Detail
   cursor: pointer;
   font-size: 1rem;
   text-align: start;
-  color: var(--black-50);
+  color: var(--black-40);
 }
 
 .post-detail-remove-icon {
@@ -1989,7 +1992,7 @@ Post Detail
   border: none;
   font-weight: 500;
   background: transparent;
-  border: 2px solid var(--brown-80);
+  border: 2px solid var(--black-80);
 }
 
 .post-detail-post-edit-form > textarea {
@@ -2002,7 +2005,7 @@ Post Detail
   padding: 0.8rem 1rem;
   color: var(--brown-10);
   background: transparent;
-  border: 2px solid var(--brown-80);
+  border: 2px solid var(--black-80);
 }
 
 .post-detail-post-edit-btns {
@@ -2015,7 +2018,7 @@ Post Detail
 
 .post-detail-post-edit-btn-submit {
   padding: 0.7rem 1.4rem;
-  background: var(--orange-50);
+  background: var(--cta);
   color: white;
   border-radius: 25px;
   letter-spacing: 0.05rem;
@@ -2053,7 +2056,7 @@ Post Detail
   gap: 0.5rem;
   border-radius: 15px;
   margin: 2.5rem 0;
-  border: 2px solid var(--brown-80);
+  border: 2px solid var(--black-80);
 }
 
 .child-comment-form {
@@ -2096,7 +2099,7 @@ Post Detail
 
 .comment-btn-submit {
   padding: 0.7rem 1.4rem;
-  background: var(--orange-50);
+  background: var(--cta);
   color: white;
   border-radius: 25px;
   letter-spacing: 0.05rem;
@@ -2117,6 +2120,7 @@ Post Detail
   cursor: pointer;
   font-weight: 500;
   font-size: 1rem;
+  text-transform: uppercase;
 }
 
 /* comments */
@@ -2134,7 +2138,7 @@ Post Detail
 }
 
 .has-parent-id {
-  margin: 1rem 1rem 0 1rem;
+  margin: 1rem 0rem 0 1rem;
 }
 
 .post-detail-comments__user-profile {
@@ -2154,6 +2158,7 @@ Post Detail
   width: 35px;
   height: auto;
   display: block;
+  border-radius: 50%;
 }
 
 .post-detail-username-and-date {
@@ -2185,7 +2190,7 @@ Post Detail
 .post-detail-comments__content {
   line-height: 1.4;
   letter-spacing: 0.05rem;
-  color: var(--black-20);
+  color: var(--black-30);
   text-wrap: balance;
   margin-top: 0.5rem;
   font-size: clamp(0.85rem, 1dvw + 0.5rem, 1rem);
@@ -2207,7 +2212,7 @@ Post Detail
   align-items:center;
   flex-wrap: wrap;
   gap: 0.4rem;
-  color: var(--black-60);
+  color: var(--black-50);
   background: none;
   border: none;
   cursor: pointer;
@@ -2224,7 +2229,7 @@ Post Detail
 .post-detail-comment-edit-text,
 .post-detail-comment-remove-text {
   font-size: 0.9rem;
-  color: var(--black-60);
+  color: var(--black-40);
   font-weight: 500;
 }
 
@@ -2257,7 +2262,6 @@ Post Detail
 .no-comments-container > h3 {
   color: var(--bkack-20);
   letter-spacing: 0.05rem;
-  font-size: 1.3rem;
   text-wrap: balance;
   font-size: 1.5rem;
 }
@@ -2272,14 +2276,15 @@ Post Detail
 .no-comment-login-to-create-post{
   letter-spacing: 0.05rem;
   line-height: 1.5;
-  font-weight: 600;
+  font-weight: 700;
   color: var(--black-20);
   text-wrap: balance;
+  font-size: 1.1rem;
 }
 
 .no-comments-container > a {
   color: white;
-  background: var(--orange-50);
+  background: var(--cta);
   letter-spacing: 0.05rem;
   border-radius: 25px;
   display: flex;
@@ -2302,7 +2307,7 @@ Post Detail
   align-content: start;
   border-radius: 15px;
   margin: 1.5rem 0rem 1.5rem 0.7rem;
-  border: 2px solid var(--brown-80);
+  border: 2px solid var(--black-80);
 }
 
 .post-detail-update-comment-textarea {
@@ -2332,7 +2337,7 @@ Post Detail
 
 .post-detail-update-comment-update-btn {
   padding: 0.7rem 1.4rem;
-  background: var(--orange-50);
+  background: var(--cta);
   color: white;
   text-align: center;
   border-radius: 25px;
@@ -2629,35 +2634,11 @@ My Posts
   margin-left: 0.2rem;
 }
 
-@media screen and (min-width: 626px) {
-  .my-posts-container > 
-  .no-topic-post-container >
-  .no-topic-post-text-container {
-    text-align: center;
-  }
 
-  .my-posts-container > 
-  .no-topic-post-container >
-  .no-topic-post-text-container > a {
-    justify-self: center;
-  }
-}
 
 @media screen and (min-width: 663px) {
   .my-posts-container__posts {
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  }
-
-  .my-posts-container > 
-  .no-topic-post-container >
-  .no-topic-post-text-container {
-    text-align: start;
-  }
-
-  .my-posts-container > 
-  .no-topic-post-container >
-  .no-topic-post-text-container > a {
-    justify-self: start;
   }
 }
 
@@ -2776,10 +2757,10 @@ My Comments
 
 .update-comment-submit-btn,
 .update-comment-cancel-btn{
-  padding: 0.5rem 1rem;
+  padding: 0.7rem 1.4rem;
   letter-spacing: 0.05rem;
   font-size: 1rem;
-  background: var(--orange-50);
+  background: var(--cta);
   border-radius: 30px;
   color: white;
   border: none;
@@ -2965,29 +2946,32 @@ Create Post
   display: flex;
   align-items: center;
   justify-content: end;
-  gap: 0.5rem
-}
-
-.create-post__btn {
-  padding: 0.6rem 1rem;
-  letter-spacing: 0.05rem;
-  color: white;
-  background: var(--orange-50);
-  border-radius: 20rem;
-  border: none;
-  font-size: 1rem;
+  gap: 0.5rem;
   margin-top: 0.5rem;
 }
 
+.create-post__btn {
+  padding: 0.7rem 1.4rem;
+  letter-spacing: 0.05rem;
+  color: white;
+  background: var(--cta);
+  border-radius: 20rem;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
 .create-post-cancel-btn {
-  padding: 0.6rem 1rem;
+  padding: 0.7rem 1.4rem;
   letter-spacing: 0.05rem;
   color: white;
   background: var(--black-30);
   border-radius: 20rem;
   border: none;
   font-size: 1rem;
-  margin-top: 0.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
 .create-post__select:focus,
@@ -3012,7 +2996,7 @@ TOPIC POSTS
   max-width: 1400px;
   margin: 2rem auto;
   gap: 6rem;
-  min-height: 100dvh;
+  min-height: 50dvh;
 }
 
 .topic-posts-container {
@@ -3034,86 +3018,60 @@ styling.
 
 
 /* No topic posts */
-.no-topic-post-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  width: 95%;
-  margin: 0rem auto
-}
-
-.no-topic-post-container > img {
-  width: 35%;
-  max-width: 170px;
-  min-width: 100px;
-  display: block;
-  height: auto;
-}
-
 .no-topic-post-text-container {
   display: grid;
-  gap: 0.5rem;
+  justify-items: center;
+  align-content: start;
+  gap: 1rem;
   text-align: center;
 }
 
-.no-topic-post-text-container > h3 {
-  color: var(--brown-20);
+.no-topic-post-header {
+  color: var(--black-20);
   letter-spacing: 0.05rem;
-  font-size: 1.3rem;
-  text-wrap: pretty;
+  font-size: 1.7rem;
+  text-wrap: balance;
+  line-height: 1.3;
 }
 
-.no-topic-post-text-container > p {
+.no-topic-post-text {
   letter-spacing: 0.05rem;
   line-height: 1.4;
-  text-wrap: pretty;
-  color: var(--brown-30);
+  text-wrap: balance;
+  color: var(--black-30);
   max-width: 400px;
 }
 
-.no-topic-post-text-container > a {
-  background: var(--orange-50);
+.no-topic-login-to-create-post-btn,
+.no-topic-post-create-btn {
+  background: var(--cta);
   color: white;
   border: none;
-  padding: 0.6rem 1rem;
+  padding: 0.7rem 1.4rem;
   font-size: 1rem;
   letter-spacing: 0.05rem;
   margin-top: 0.3rem;
   border-radius: 25px;
   justify-self: center;
-}
-
-.no-topic-post-text-container > 
-.login-to-create-post {
-  color: var(--brown-10);
   font-weight: 500;
+  text-transform: uppercase;
   display: flex;
-  gap: 0.5rem
+  gap: 0.5rem;
+  align-items: center;
 }
 
-.no-topic-post-text-container > 
-.login-to-create-post > a {
-  color: var(--orange-50);
-  font-weight: 600;
-  text-decoration: underline;
+.no-topic-post-create-btn {
+  padding: 0.8rem 1.4rem;
 }
 
+.login-to-create-post {
+  color: var(--black-15);
+  font-weight: 700;
+  letter-spacing: 0.05rem;
+  font-size: 1.1rem;
+  text-wrap: balance;
+}
 /* end */
-@media screen and (min-width: 626px) {
-  .no-topic-post-container > img {
-    width: 170px;
-  }
-  
-  .no-topic-post-text-container {
-    text-align: start;
-  }
-
-  .no-topic-post-text-container > a {
-    justify-self: start;
-  }
-}
 
 @media screen and (min-width: 800px) {
   .topic-posts-wrapper {
@@ -3489,23 +3447,27 @@ LOGOUT
 }
 
 .logout-container-btns > button {
-  padding: 0.5rem 1rem;
-  background: var(--black-40);
+  padding: 0.7rem 1.4rem;
+  background: var(--black-30);
   border-radius: 25px;
   color: white;
   letter-spacing: 0.05rem;
   border: none;
   font-size: 1rem;
   cursor: pointer;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
 .logout-container-btns > a {
-  padding: 0.5rem 1rem;
-  background: var(--orange-50);
+  padding: 0.7rem 1.4rem;
+  background: var(--cta);
   border-radius: 25px;
   color: white;
   letter-spacing: 0.05rem;
   font-size: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 /* 
 ======
@@ -3536,11 +3498,13 @@ FOOTER
 .footer-container__logo {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.6rem;
 }
 
 .footer-container__brand-logo {
   width: 40px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   display: block;
   height: auto;
 }
